fix: fix project cards layout issue

--- a/style.css
+++ b/style.css
@@ -208,6 +208,12 @@ a:active {
   font-size: 1.8rem;
 }
 
+.section__list__item--projects {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+
 .section__list__item__desc {
   font-weight: normal;
   margin-left: 1rem;
